--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "canvas": "^3.1.2",
     "next": "15.4.6",
     "react": "19.1.0",
