--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glamore",
+  "name": "glarmourglow-fashion",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.2",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
