feat: implement authentication, cart management and product seeding with Prisma

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ DATABASE_URL="file:./prisma/dev.db"
 EMAIL_USER=osisami.oj@gmail.com
 EMAIL_PASS=gabv tzns sdys vspf
 
+# JWT Secret for authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
 # Alternative Email Providers:
 # For Outlook/Hotmail:
 # EMAIL_USER=your-email@outlook.com
