--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
