fix: add @clerk/nextjs dependency

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+.DS_Store
 /.pnp
 .pnp.*
 .yarn/*
@@ -41,3 +42,6 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
+# Local Netlify folder
+.netlify
