--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "@clerk/nextjs": "^5.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
