feat: configure PostgreSQL for Neon database

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
-# Database
-DATABASE_URL="file:./prisma/dev.db"
+# Database - Neon PostgreSQL
+DATABASE_URL="postgresql://username:password@host/database?sslmode=require"
 
 # Email Configuration (for sending welcome emails)
 # For Gmail: Use your email and an "App Password" (not your regular password)
