fix: add binary targets for Netlify deployment

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "netlify dev:exec drizzle-kit migrate",
+    "db:studio": "netlify dev:exec drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.8",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.14.0",
     "@types/bcrypt": "^6.0.0",
@@ -16,17 +20,18 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.2",
+    "drizzle-orm": "^0.44.4",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@clerk/nextjs": "^5.2.8"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4"
