feat: add bespoke product detail page with API integration and routing

--- a/netlify.toml
+++ b/netlify.toml
@@ -24,3 +24,8 @@
   from = "/product/*"
   to = "/product/:splat"
   status = 200
+
+[[redirects]]
+  from = "/bespoke/*"
+  to = "/bespoke/:splat"
+  status = 200
